# mate-videocutter

./: README.md  meson.build
src/: langlist.cpp  langlist.h  main.cpp
